# cat-clone

./: CMakeLists.txt  README.md
include/logger/: Logger.h
include/reader/: Reader.h
lib/: CMakeLists.txt
lib/logger/: CMakeLists.txt  Logger.cpp
lib/reader/: CMakeLists.txt  Reader.cpp
src/: CMakeLists.txt  argParser.cpp  main.cpp  menu.cpp
src/include/: argParser.h  menu.h
test/: CMakeLists.txt
